Fix line thickness control visibility

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ a {
     display: inline-block;
   }
   a span {
+    filter: drop-shadow(0 0 0.25rem rgba(0, 0, 0, 0.5));
     position: absolute;
     right: calc(-150px - 20px);
     top: 50%;
@@ -116,6 +117,7 @@ a {
     border: solid 2px #bbb;
     width: 150px;
     display: none;
+    z-index: 1;
   }
   a span::before {
     content: '';
@@ -127,4 +129,5 @@ a {
     border-right: 5px solid #bbb;
     border-bottom: 5px solid transparent;
     border-top: 5px solid transparent;
+    z-index: 1;
   }
